--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="edit_note">Edit note</string>
     <string name="add_note">Add note</string>
     <string name="note_saved">Note saved</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
